[package]
name = "rusthead"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
bcrypt = "0.17.0"
rand = "0.9"
askama = { version = "0.13", default-features = false, features = ["derive", "std"]}
serde = { version = "1", features = ["derive"] }
toml = "0.8"
url = { version = "2", features = ["serde"] }
