[package]
name = "rusthead"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
bcrypt = "0.17.0"
rand = "0.9"
askama = { version = "0.14", default-features = false, features = ["derive", "std"]}
serde = { version = "1", features = ["derive"] }
toml = "0.9"
url = { version = "2", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
rcgen = "0.14.3"
