[package]
name = "rusthead"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
bcrypt = "0.17.1"
rand = "0.9"
askama = { version = "0.15", default-features = false, features = [
    "derive",
    "std",
] }
serde = { version = "1", features = ["derive"] }
toml = "0.9.10+spec-1.1.0"
url = { version = "2", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
rcgen = "0.14.6"
serde_json = "1"

[dev-dependencies]
insta = { version = "1.46", features = ["filters", "glob", "toml"] }
tempfile = "3.24"
toml = { version = "*", features = ["preserve_order"] }

[profile.dev]
strip = "debuginfo"
